@@ -1,3 +1,5 @@
+2011-9-2_23:05 Zhao Bolu<zhaobl880704@gmail.com>
+delete Localization
 2011-9-2_22:01 Zhao Bolu<zhaobl880704@gmail.com>
 delete log in WorldModel and Player
 2011-9-2_16:08 Zhao Bolu<zhaobl880704@gmail.com>
